# axum-sqlx

./: .env.example  Cargo.toml  Dockerfile  README.en.md  README.md  README.zh.md  rustfmt.toml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/route/: health.rs  mod.rs
crates/api/src/user/: mod.rs
crates/configure/: Cargo.toml
crates/configure/src/: database.rs  env.rs  jwt.rs  lib.rs  log_tracing.rs  profile.rs  server.rs
crates/configure/src/error/: mod.rs
crates/db/: Cargo.toml
crates/db/src/: db.rs  lib.rs
crates/db/src/entity/: user.rs
crates/middleware/: Cargo.toml
crates/middleware/src/: ctx.rs  jwt.rs  lib.rs
crates/migrations/: 20250101000000_create_users.sql
crates/repositroy/: Cargo.toml
crates/service/: Cargo.toml
crates/service/src/: lib.rs  user_service.rs
setting/: default.toml  development.toml  production.toml  test.toml
