[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
dotenvy.workspace = true


# Local Crates
service = { path = "../service", package = "service" }
middleware = { path = "../middleware", package = "middleware" }
repositroy = { path = "../repositroy", package = "repositroy" }
configure = { path = "../configure", package = "configure" }
