[package]
name = "middleware"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tracing.workspace = true
tower.workspace = true
tower-http.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
configure = { path = "../configure", package = "configure" }
