[package]
name = "repositroy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sqlx.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
tracing.workspace = true
config.workspace = true
dotenvy.workspace = true
once_cell.workspace = true
tokio.workspace = true
configure = { path = "../configure", package = "configure" }
