[package]
name = "service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
repositroy = { path = "../repositroy", package = "repositroy" }
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
uuid.workspace = true
